--- a/frontend/src/app/ngx-intl-tel-input/src/resource/intl-tel-input.css
+++ b/frontend/src/app/ngx-intl-tel-input/src/resource/intl-tel-input.css
@@ -11,6 +11,12 @@
  *
  *     // import the scss file after the overrides
  */
+/*Custom CSS*/
+.intl-tel-input.allow-dropdown {
+  width: 100%;
+}
+
+
 .intl-tel-input {
     position: relative;
     display: inline-block; }
