--- a/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
+++ b/frontend/src/app/settings/serviceproviders/serviceproviders.component.html
@@ -1,11 +1,11 @@
 <!-- Button trigger modal -->
 <div class="text-right my-2 col-sm-11">
-  <button class="btn btn-primary dropdown-toggle mb-3"
-          type="button"
-          id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-    + Add Service Provider
+  <button type="button"
+          class="btn btn-primary dropdown-toggle mb-3"
+          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+    <i class="fas fa-plus mr-1"></i> Add Service Provider
   </button>
-  <div class="list-group dropdown-menu dropdown fade py-0">
+  <div class="dropdown-menu my-0 py-0">
     <a class="list-group-item list-group-item-action dropdown-item"
        href="#serviceProviderModal"
        data-toggle="modal"
