--- a/frontend/src/app/cron-editor/cron-editor.component.scss
+++ b/frontend/src/app/cron-editor/cron-editor.component.scss
@@ -65,16 +65,35 @@
 }
 
 label {
-  width: 35px;
+  width: 49px;
   height: 35px;
   text-align: center;
   border: 1px solid #ddd;
+  background: #eceef1;
   line-height: 33px;
   margin-right: 4px;
   border-radius: 5px;
   cursor: pointer;
 }
 .checkbox-btn:checked ~ label{
-  background: #999;
+  background: #005C99;
   color: #fff;
+}
+
+.nav-tabs .nav-link.active {
+  background: #eceef1;
+}
+
+#weekLabels {
+  background: #87939c;
+  color: white;
+  margin-right: -2px;
+  font-size: 12px;
+  width: 60px;
+  padding-right: 3px;
+  padding-left: 3px;
+  display: inline-block;
+  text-align: center;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
 }
