--- a/frontend/src/app/segment-category/segments/segments.component.html
+++ b/frontend/src/app/segment-category/segments/segments.component.html
@@ -2,7 +2,7 @@
   <div class="text-right mt-3 mb-1">
     <!-- Button trigger modal -->
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong" (click)="onCreateNew()">
-      Create New Segment
+      <i class="fas fa-plus mr-1"></i> Create New Segment
     </button>
   </div>
   <table class="table table-bordered my-3">
