--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-8 col-md-10 col-sm-12 mx-auto mt-4">
-    <div class="card"
+    <div class="card mx-3"
          *ngIf="!showScheduleForm">
       <h3 class="card-header">
         Setup Your Campaign
@@ -73,7 +73,7 @@
       </div>
     </div>
 
-    <div class="card"
+    <div class="card mx-3"
          *ngIf="showScheduleForm">
       <h3 class="card-header">
         When do you want to schedule this campaign?
