--- a/frontend/src/app/footer/footer.component.scss
+++ b/frontend/src/app/footer/footer.component.scss
@@ -5,3 +5,12 @@ footer{
   background-color: #222; !* This color gets inverted color or you can add navbar inverse class in html *!
 }
 */
+footer {
+  background: #005C99;
+}
+.site-links li{
+  font-size: 1.1rem;
+}
+.site-links li a:hover {
+  text-decoration: none;
+}
