--- a/frontend/src/app/landing-page-und/landing-page-und.component.html
+++ b/frontend/src/app/landing-page-und/landing-page-und.component.html
@@ -287,7 +287,7 @@
       <p class="section-title text-capitalize px-2">Setup a time to chat with one of our experts and get a fully
         customized demo.</p>
     </div>
-    <div class="row py-4 my-2 justify-content-center">
+    <div class="row py-4 mt-2 mb-4 justify-content-center">
       <div class="col-md-6 px-4">
         <app-demo-form></app-demo-form>
         <!--<div class="form-group row col-sm-7 pull-right pl-0">-->
