--- a/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
+++ b/frontend/src/app/campaigns/setup-campaign/setup-campaign.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div class="col-lg-10 col-md-10 col-sm-12 mx-auto mt-4">
+<div class="row">
+  <div class="col-lg-8 col-md-10 col-sm-12 mx-auto mt-4">
     <div class="card mx-3"
          *ngIf="!showScheduleForm">
       <h3 class="card-header">
